src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    font-family: Droid Arabic Kufi Regular, sans-serif;
  }
}

@font-face {
  font-family: 'Droid Arabic Kufi Regular';
  src: url('/fonts/DroidKufi-Regular.woff2') format('woff2');
  font-display: swap;
}

@font-face {
  font-family: 'Droid Arabic Kufi Bold';
  src: url('/fonts/DroidKufi-Bold.woff2') format('woff2');
  font-display: swap;
}

html {
  @apply text-black h-full;
}

body {
  @apply h-full;
  scrollbar-width: thin;
}

::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-track {
  background-color: #f5f5f5;
}

::-webkit-scrollbar-thumb {
  border-radius: 10px;
  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
  background-color: #ccc;
  height: 80px;
}

.dir-rtl {
  direction: rtl;
}

.dir-ltr {
  direction: ltr;
}

.inner-html a {
  color: #6598cb;
}

.inner-html ul {
  list-style: disc;
  padding-right: 30px;
  margin: 20px 0px;
}

.inner-html ul li:not(:last-child) {
  margin-bottom: 10px;
}

@layer base {
  body {
    @apply bg-white;
  }
}

/* carousel style overrides start*/
.carousel:nth-of-type(2) {
  position: absolute;
  bottom: 0px;
  left: 0px;
}

.carousel .slide {
  display: flex;
  justify-content: center;
  align-items: center;
}
.carousel .thumbs-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
}

.carousel .thumbs {
  width: 100%;
  display: flex;
  justify-content: center;
  overflow: hidden !important;
  transform: none !important;
}

.carousel .thumb {
  display: flex !important;
  justify-content: center !important;
  align-items: center !important;
  padding: 0 !important;
  border: 1px solid #111 !important;
  box-shadow: 0px 0px 1px #9c9c9c;
}

.carousel .thumb.selected,
.carousel .thumb:hover {
  border: 1px solid #9c9c9c !important;
}

@media screen and (min-width: 1920px) {
  .carousel .thumb {
    flex-basis: 150px !important;
    height: 150px !important;
  }
}
/* carousel style overrides end*/

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type='number'] {
  -moz-appearance: textfield;
}

